# muse

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build_scripts.py  build_spec.py  musa.spec  pyproject.toml
.github/workflows/: build.yml  lint.yml
musa/: __main__.py
musa/controller/: animation_controller.py
musa/dialog/: __init__.py  file_dialog_factory.py  preview_image_dialog.py  sprite_sheet_dialog.py  text_input_dialog.py
musa/item/: __init__.py  keyframe_item.py  sprite_item.py
musa/manager/: __init__.py  dock.py  resources.py
musa/model/: animation.py  animation_collection.py  frame.py  iterator.py  keyframe.py  observable.py  piece.py  serializable.py  sprite.py  sprite_sheet.py  timeline.py
musa/resources/: resources.py
musa/util/: image.py
musa/view/: __init__.py  animation_dock.py  editor_widget.py  inspector_dock.py  main_window.py
musa/widget/: __init__.py  animation_dock.py  animation_list.py  basic.py  button.py  canvas.py  dock.py  event_filter.py  frame_list.py  palette.py  piece_inspector.py  playback_control.py  scene.py  slider.py  sprite_inspector.py  sprite_list.py  viewer.py
musa/widget/editor/: __init__.py  grid.py  scene.py  view.py
musa/widget/editor/item/: __init__.py  sprite_item.py
musa/widget/timeline/: __init__.py  view.py
resources/: resources.qrc
