[tool.poetry]
name = "musa"
version = "0.1.0"
description = "Multi Sprite 2d Animation editor"
authors = ["Pablo Porta <paspallasdev@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt5 = "^5.15.11"
pyqt5-stubs = "^5.15.6.0"
qtmodern = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
