[tool.poetry]
name = "musa"
version = "0.1.0"
description = "Multi Sprite 2d Animation editor"
authors = ["Pablo Porta <paspallasdev@gmail.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt5 = "^5.15.11"
pyqt5-stubs = "^5.15.6.0"
qtmodern = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"


[tool.black]
line-length = 88
include = '\.pyi?$'
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
